monticore-generator/src/test/resources/cocos/invalid/A2008/A2008b.mc4

/* (c) https://github.com/MontiCore/monticore */

package cocos.invalid.A2008;

grammar A2008b {

    A = "a";
    B = A+ as:A+;
}